--- a/index.html
+++ b/index.html
@@ -5,38 +5,38 @@
     <body>
         <div>
             <ul>
-           <li> <p>question 1 output : <a href="1.html" >click here</a></p></li>
-           <li> <p>question 2 output : <a href="2.html" >click here</a></p></li>
-           <li> <p>question 3 output : <a href="3.html" >click here</a></p></li>
-           <li> <p>question 4 output : <a href="4.html" >click here</a></p></li>
-           <li> <p>question 5 output : <a href="5.html" >click here</a></p></li>
-           <li> <p>question 6 output : <a href="6.html" >click here</a></p></li>
-           <li> <p>question 7 output : <a href="7.html" >click here</a></p></li>
-           <li> <p>question 8 output : <a href="8.html" >click here</a></p></li>
-           <li> <p>question 9 output : <a href="9.html" >click here</a></p></li>
-           <li> <p>question 10 output : <a href="10.html" >click here</a></p></li>
-           <li> <p>question 11 output : <a href="11.html" >click here</a></p></li>
-           <li> <p>question 12 output : <a href="12.html" >click here</a></p></li>
-           <li> <p>question 13 output : <a href="13.html" >click here</a></p></li>
-           <li> <p>question 14 output : <a href="14.html" >click here</a></p></li>
-           <li> <p>question 15 output : <a href="15.html" >click here</a></p></li>
-           <li> <p>question 16 output : <a href="16.html" >click here</a></p></li>
-           <li> <p>question 17 output : <a href="17.html" >click here</a></p></li>
-           <li> <p>question 18 output : <a href="18.html" >click here</a></p></li>
-           <li> <p>question 19 output : <a href="19.html" >click here</a></p></li>
-           <li> <p>question 20 output : <a href="20.html" >click here</a></p></li>
-           <li> <p>question 21 output : <a href="21.html" >click here</a></p></li>
-           <li> <p>question 22 output : <a href="22.html" >click here</a></p></li>
-           <li> <p>question 23 output : <a href="23.html" >click here</a></p></li>
-           <li> <p>question 24 output : <a href="24.html" >click here</a></p></li>
-           <li> <p>question 25 output : <a href="25.html" >click here</a></p></li>
-           <li> <p>question 26 output : <a href="26.html" >click here</a></p></li>
-           <li> <p>question 27 output : <a href="27.html" >click here</a></p></li>
-           <li> <p>question 28 output : <a href="28.html" >click here</a></p></li>
-           <li> <p>question 29 output : <a href="29.html" >click here</a></p></li>
-           <li> <p>question 30 output : <a href="30.html" >click here</a></p></li>
-           <li> <p>question 31 output : <a href="31.html" >click here</a></p></li>
-           <li> <p>question 32 output : <a href="32.html" >click here</a></p></li>
+           <li> <p>question 1 output : <a href="New Folder/1.html" >click here</a></p></li>
+           <li> <p>question 2 output : <a href="New Folder/2.html" >click here</a></p></li>
+           <li> <p>question 3 output : <a href="New Folder/3.html" >click here</a></p></li>
+           <li> <p>question 4 output : <a href="New Folder/4.html" >click here</a></p></li>
+           <li> <p>question 5 output : <a href="New Folder/5.html" >click here</a></p></li>
+           <li> <p>question 6 output : <a href="New Folder/6.html" >click here</a></p></li>
+           <li> <p>question 7 output : <a href="New Folder/7.html" >click here</a></p></li>
+           <li> <p>question 8 output : <a href="New Folder/8.html" >click here</a></p></li>
+           <li> <p>question 9 output : <a href="New Folder/9.html" >click here</a></p></li>
+           <li> <p>question 10 output : <a href="New Folder/10.html" >click here</a></p></li>
+           <li> <p>question 11 output : <a href="New Folder/11.html" >click here</a></p></li>
+           <li> <p>question 12 output : <a href="New Folder/12.html" >click here</a></p></li>
+           <li> <p>question 13 output : <a href="New Folder/13.html" >click here</a></p></li>
+           <li> <p>question 14 output : <a href="New Folder/14.html" >click here</a></p></li>
+           <li> <p>question 15 output : <a href="New Folder/15.html" >click here</a></p></li>
+           <li> <p>question 16 output : <a href="New Folder/16.html" >click here</a></p></li>
+           <li> <p>question 17 output : <a href="New Folder/17.html" >click here</a></p></li>
+           <li> <p>question 18 output : <a href="New Folder/18.html" >click here</a></p></li>
+           <li> <p>question 19 output : <a href="New Folder/19.html" >click here</a></p></li>
+           <li> <p>question 20 output : <a href="New Folder/20.html" >click here</a></p></li>
+           <li> <p>question 21 output : <a href="New Folder/21.html" >click here</a></p></li>
+           <li> <p>question 22 output : <a href="New Folder/22.html" >click here</a></p></li>
+           <li> <p>question 23 output : <a href="New Folder/23.html" >click here</a></p></li>
+           <li> <p>question 24 output : <a href="New Folder/24.html" >click here</a></p></li>
+           <li> <p>question 25 output : <a href="New Folder/25.html" >click here</a></p></li>
+           <li> <p>question 26 output : <a href="New Folder/26.html" >click here</a></p></li>
+           <li> <p>question 27 output : <a href="New Folder/27.html" >click here</a></p></li>
+           <li> <p>question 28 output : <a href="New Folder/28.html" >click here</a></p></li>
+           <li> <p>question 29 output : <a href="New Folder/29.html" >click here</a></p></li>
+           <li> <p>question 30 output : <a href="New Folder/30.html" >click here</a></p></li>
+           <li> <p>question 31 output : <a href="New Folder/31.html" >click here</a></p></li>
+           <li> <p>question 32 output : <a href="New Folder/32.html" >click here</a></p></li>
 
 
             </ul>
